fix minor css problems - fullbar is now 100vh - size of navbar - prevent x overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 html {
-	height: 100vh;
+	overflow-x: hidden;
 }
